--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
 
            text-align: center;
@@ -29,10 +28,8 @@ body
 
            background: lightblue;
          background: #FFEFBA;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA)
-           ;/* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #FFFFFF, #FFEFBA)
-           ; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #FFFFFF, #FFEFBA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
 
@@ -88,6 +85,7 @@ ul li a:hover {
  background:black url(images/noir-2.png) repeat-x;
  color:white;
  }  
+
 
 
 
